<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/txt_car_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_service_record"
        android:textSize="34sp"
        android:textColor="@color/white"
        android:layout_marginTop="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_car_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="64dp"
        android:hint="@string/enter_car_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_car_service" />

    <EditText
        android:id="@+id/et_car_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:hint="@string/enter_car_number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/et_car_name"
        app:layout_constraintStart_toStartOf="@id/et_car_name"
        app:layout_constraintEnd_toEndOf="@id/et_car_name"/>

    <EditText
        android:id="@+id/et_service_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:hint="@string/enter_a_service_description"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/et_car_number"
        app:layout_constraintStart_toStartOf="@id/et_car_number"
        app:layout_constraintEnd_toEndOf="@id/et_car_number"/>


    <View
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="64dp"
        android:text="@string/add"
        android:textStyle="bold"
        android:background="@drawable/background_action_button"
        app:layout_constraintTop_toBottomOf="@id/et_service_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/btn_add"
        app:layout_constraintStart_toStartOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="@id/btn_add"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add"
        />

    <View
        android:id="@+id/btn_show_car_list"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/show_car_list"
        android:textStyle="bold"
        android:layout_marginTop="14dp"
        android:background="@drawable/background_action_button"
        app:layout_constraintTop_toBottomOf="@+id/btn_add"
        app:layout_constraintStart_toStartOf="@id/btn_add"
        app:layout_constraintEnd_toEndOf="@id/btn_add"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_car_list"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/btn_show_car_list"
        app:layout_constraintStart_toStartOf="@+id/btn_show_car_list"
        app:layout_constraintEnd_toEndOf="@id/btn_show_car_list"
        app:layout_constraintBottom_toBottomOf="@+id/btn_show_car_list"
        />

</androidx.constraintlayout.widget.ConstraintLayout>