<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/close_area"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/car_item_background"
        android:layout_margin="14dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="14dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_close"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_car_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="34dp"
            android:hint="@string/enter_car_name"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_close" />

        <EditText
            android:id="@+id/et_car_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:hint="@string/enter_car_number"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/et_car_name"
            app:layout_constraintStart_toStartOf="@id/et_car_name"
            app:layout_constraintEnd_toEndOf="@id/et_car_name"/>

        <EditText
            android:id="@+id/et_service_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="34dp"
            android:hint="@string/enter_a_service_description"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btn_update"
            app:layout_constraintTop_toBottomOf="@id/et_car_number"
            app:layout_constraintStart_toStartOf="@id/et_car_number"
            app:layout_constraintEnd_toEndOf="@id/et_car_number"/>

        <TextView
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="34dp"
            android:background="@drawable/background_action_button"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/txt_update"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_service_description"
            app:layout_constraintStart_toStartOf="@+id/et_service_description" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>