<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.onboarding.OnboardingFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_onboarding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-16dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_content_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bottom_content_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/onboarding_item_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/btn_skip"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/gilory_light"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_margin="14dp"
        android:textColor="@color/blue_color"
        android:text="@string/skip_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/btn_get_started"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="14dp"
        android:text="@string/get_started_txt"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        app:layout_constraintStart_toStartOf="@id/btn_skip"
        app:layout_constraintEnd_toEndOf="@id/btn_skip"
        app:layout_constraintBottom_toTopOf="@id/btn_skip"/>

    <TextView
        android:id="@+id/txt_car_service_record"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:text="@string/car_service_record"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="@id/txt_onboard_description"
        app:layout_constraintEnd_toEndOf="@id/txt_onboard_description"
        app:layout_constraintBottom_toTopOf="@id/txt_onboard_description"/>

    <TextView
        android:id="@+id/txt_onboard_description"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/gilory_light"
        android:textColor="@color/grey_color"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/btn_get_started"
        app:layout_constraintEnd_toEndOf="@id/btn_get_started"
        app:layout_constraintStart_toStartOf="@id/btn_get_started" />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dotsColor="@color/dots_unselected_color"
        app:dotsCornerRadius="16dp"
        android:layout_marginBottom="20dp"
        app:dotsSize="8dp"
        app:dotsSpacing="4dp"
        app:dotsWidthFactor="2.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txt_car_service_record"
        app:progressMode="true"
        app:selectedDotColor="@color/dots_selected_color" />


</androidx.constraintlayout.widget.ConstraintLayout>